tests/baselines/reference/iterableArrayPattern18.errors.txt
iterableArrayPattern18.ts(17,5): error TS2345: Argument of type 'FooIterator' is not assignable to parameter of type 'Bar[]'.
  Type 'FooIterator' is missing the following properties from type 'Bar[]': length, pop, push, concat, and 24 more.


==== iterableArrayPattern18.ts (1 errors) ====
    class Bar { x }
    class Foo extends Bar { y }
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    function fun([a, b]: Bar[]) { }
    fun(new FooIterator);
        ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'FooIterator' is not assignable to parameter of type 'Bar[]'.
!!! error TS2345:   Type 'FooIterator' is missing the following properties from type 'Bar[]': length, pop, push, concat, and 24 more.